turbopack/crates/turbo-tasks-macros-tests/tests/derive_resolved_value/fail_contains_only_vc.rs
#![allow(dead_code)]

use turbo_tasks::{ResolvedValue, Vc};

#[derive(ResolvedValue)]
struct ContainsOnlyVc {
    a: Vc<i32>,
}

fn main() {}
